--- a/index.html
+++ b/index.html
@@ -135,8 +135,12 @@
               free to contact me by email or through LinkedIn.
             </p>
             <p>
-              <a href="repos.html" class="btn btn-primary my-2"
-                >Go to Repositories</a
+              <a href="repos.html" class="btn btn-primary my-2">Repositories</a>
+              <a
+                href="https://github.com/JulieStrand"
+                target="_blank"
+                class="btn btn-secondary my-2"
+                >Github @JulieStrand</a
               >
             </p>
           </div>
@@ -177,7 +181,8 @@
             >Back to top</a
           >
         </p>
-        <p class="mb-1">&copy; Julie Strand</p>
+        <img width="30px" src="myBlockie.png" />
+        <span class="mb-1"> &copy; Julie Strand</span>
         <p class="mb-0">
           Please visit my
           <a href="https://www.linkedin.com/in/julie-strand-6200b079/"
