--- a/repos.html
+++ b/repos.html
@@ -180,7 +180,7 @@
                 href="https://github.com/JulieStrand"
                 target="_blank"
                 class="btn btn-primary my-2"
-                >Go to Julie's Github</a
+                >Github @JulieStrand</a
               >
               <a href="index.html" class="btn btn-secondary my-2">Home</a>
             </p>
@@ -194,7 +194,7 @@
         <div class="container">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
-              <div class="card shadow-sm">
+              <div class="card shadow-sm h-100">
                 <img
                   src="pix/bus tracker.png"
                   class="card-img-top"
@@ -213,8 +213,15 @@
                     <div class="btn-group">
                       <button
                         type="button"
-                        class="btn btn-sm btn-outline-secondary"
+                        class="btn btn-sm btn-outline-primary"
                         onclick="location.href='https://juliestrand.github.io/realtime-bus-tracker'"
+                      >
+                        Go to Demo
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-sm btn-outline-secondary"
+                        onclick="location.href='https://github.com/JulieStrand/realtime-bus-tracker'"
                       >
                         See on GitHub
                       </button>
@@ -226,7 +233,41 @@
             </div>
 
             <div class="col">
-              <div class="card shadow-sm">
+              <div class="card shadow-sm h-100">
+                <img src="pix/two eyes.png" class="card-img-top" alt="image" />
+
+                <div class="card-body">
+                  <h5 class="card-title">Moving Eyes</h5>
+                  <p class="card-text">
+                    Eyes will watch your mouse as it moves about the page.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="btn-group">
+                      <button
+                        type="button"
+                        class="btn btn-sm btn-outline-primary"
+                        onclick="location.href='https://juliestrand.github.io/eyes'"
+                      >
+                        Go to Demo
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-sm btn-outline-secondary"
+                        onclick="location.href='https://github.com/JulieStrand/eyes'"
+                      >
+                        See on GitHub
+                      </button>
+                    </div>
+                    <!-- <small class="text-muted">9 mins</small> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm h-100">
                 <img src="pix/pacmen.png" class="card-img-top" alt="image" />
 
                 <div class="card-body">
@@ -241,37 +282,15 @@
                     <div class="btn-group">
                       <button
                         type="button"
-                        class="btn btn-sm btn-outline-secondary"
+                        class="btn btn-sm btn-outline-primary"
                         onclick="location.href='https://juliestrand.github.io/Pacmen'"
                       >
-                        See on GitHub
+                        Go to Demo
                       </button>
-                    </div>
-                    <!-- <small class="text-muted">9 mins</small> -->
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card shadow-sm">
-                <img
-                  src="pix/chicagoheatmap.png"
-                  class="card-img-top"
-                  alt="image"
-                />
-
-                <div class="card-body">
-                  <h5 class="card-title">Heatmap</h5>
-                  <p class="card-text">Heatmap of 2012 crime data in Chicago</p>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
                       <button
                         type="button"
                         class="btn btn-sm btn-outline-secondary"
-                        onclick="location.href='https://juliestrand.github.io/heat-map'"
+                        onclick="location.href='https://github.com/JulieStrand/Pacmen'"
                       >
                         See on GitHub
                       </button>
@@ -283,34 +302,7 @@
             </div>
 
             <div class="col">
-              <div class="card shadow-sm">
-                <img src="pix/two eyes.png" class="card-img-top" alt="image" />
-
-                <div class="card-body">
-                  <h5 class="card-title">Moving Eyes</h5>
-                  <p class="card-text">
-                    Eyes will watch your mouse as it moves about the page.
-                  </p>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                        onclick="location.href='https://juliestrand.github.io/eyes'"
-                      >
-                        See on GitHub
-                      </button>
-                    </div>
-                    <!-- <small class="text-muted">9 mins</small> -->
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card shadow-sm">
+              <div class="card shadow-sm h-100">
                 <img
                   src="pix/hanoitower2.png"
                   class="card-img-top"
@@ -329,35 +321,15 @@
                     <div class="btn-group">
                       <button
                         type="button"
-                        class="btn btn-sm btn-outline-secondary"
+                        class="btn btn-sm btn-outline-primary"
                         onclick="location.href='https://juliestrand.github.io/hanoi-tower'"
                       >
-                        See on GitHub
+                        Go to Demo
                       </button>
-                    </div>
-                    <!-- <small class="text-muted">9 mins</small> -->
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                <img src="pix/pacman.png" class="card-img-top" alt="image" />
-
-                <div class="card-body">
-                  <h5 class="card-title">Pacman Exercise</h5>
-                  <p class="card-text">
-                    A hungry Pacman chomps his way back and forth across the
-                    screen.
-                  </p>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
                       <button
                         type="button"
                         class="btn btn-sm btn-outline-secondary"
-                        onclick="location.href='https://juliestrand.github.io/Pac-man'"
+                        onclick="location.href='https://github.com/JulieStrand/hanoi-tower'"
                       >
                         See on GitHub
                       </button>
@@ -369,7 +341,7 @@
             </div>
 
             <div class="col">
-              <div class="card shadow-sm">
+              <div class="card shadow-sm h-100">
                 <img
                   src="pix/chicagocluster.png"
                   class="card-img-top"
@@ -388,8 +360,15 @@
                     <div class="btn-group">
                       <button
                         type="button"
-                        class="btn btn-sm btn-outline-secondary"
+                        class="btn btn-sm btn-outline-primary"
                         onclick="location.href='https://juliestrand.github.io/map-cluster'"
+                      >
+                        Go to Demo
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-sm btn-outline-secondary"
+                        onclick="location.href='https://github.com/JulieStrand/map-cluster'"
                       >
                         See on GitHub
                       </button>
@@ -401,7 +380,43 @@
             </div>
 
             <div class="col">
-              <div class="card shadow-sm">
+              <div class="card shadow-sm h-100">
+                <img
+                  src="pix/chicagoheatmap.png"
+                  class="card-img-top"
+                  alt="image"
+                />
+
+                <div class="card-body">
+                  <h5 class="card-title">Heatmap</h5>
+                  <p class="card-text">Heatmap of 2012 crime data in Chicago</p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="btn-group">
+                      <button
+                        type="button"
+                        class="btn btn-sm btn-outline-primary"
+                        onclick="location.href='https://juliestrand.github.io/heat-map'"
+                      >
+                        Go to Demo
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-sm btn-outline-secondary"
+                        onclick="location.href='https://github.com/JulieStrand/heat-map'"
+                      >
+                        See on GitHub
+                      </button>
+                    </div>
+                    <!-- <small class="text-muted">9 mins</small> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm h-100">
                 <img
                   src="pix/map-animation.png"
                   class="card-img-top"
@@ -420,8 +435,15 @@
                     <div class="btn-group">
                       <button
                         type="button"
-                        class="btn btn-sm btn-outline-secondary"
+                        class="btn btn-sm btn-outline-primary"
                         onclick="location.href='https://juliestrand.github.io/map-animation'"
+                      >
+                        Go to Demo
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-sm btn-outline-secondary"
+                        onclick="location.href='https://github.com/JulieStrand/map-animation'"
                       >
                         See on GitHub
                       </button>
@@ -431,8 +453,44 @@
                 </div>
               </div>
             </div>
+
             <div class="col">
-              <div class="card shadow-sm">
+              <div class="card shadow-sm h-100">
+                <img src="pix/pacman.png" class="card-img-top" alt="image" />
+
+                <div class="card-body">
+                  <h5 class="card-title">Pacman Exercise</h5>
+                  <p class="card-text">
+                    A hungry Pacman chomps his way back and forth across the
+                    screen.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="btn-group">
+                      <button
+                        type="button"
+                        class="btn btn-sm btn-outline-primary"
+                        onclick="location.href='https://juliestrand.github.io/Pac-man'"
+                      >
+                        Go to Demo
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-sm btn-outline-secondary"
+                        onclick="location.href='https://github.com/JulieStrand/Pac-man'"
+                      >
+                        See on GitHub
+                      </button>
+                    </div>
+                    <!-- <small class="text-muted">9 mins</small> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm h-100">
                 <img
                   src="pix/grid-layout.png"
                   class="card-img-top"
@@ -450,8 +508,15 @@
                     <div class="btn-group">
                       <button
                         type="button"
-                        class="btn btn-sm btn-outline-secondary"
+                        class="btn btn-sm btn-outline-primary"
                         onclick="location.href='https://juliestrand.github.io/grid-layout'"
+                      >
+                        Go to Demo
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-sm btn-outline-secondary"
+                        onclick="location.href='https://github.com/JulieStrand/grid-layout'"
                       >
                         See on GitHub
                       </button>
@@ -473,7 +538,8 @@
             >Back to top</a
           >
         </p>
-        <p class="mb-1">&copy; Julie Strand</p>
+        <img width="30px" src="myBlockie.png" />
+        <span class="mb-1"> &copy; Julie Strand</span>
         <p class="mb-0">
           Please visit my
           <a href="https://www.linkedin.com/in/julie-strand-6200b079/"
